[ACS-8450] Fixed issue where required marker * was not showing up for creat rule > Name field

--- a/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
+++ b/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
@@ -33,6 +33,10 @@
       align-items: baseline;
       gap: 8px;
 
+      #{$mat-floating-label}#{$mat-floating-label-above} {
+        transform: translateY(-122%) scale(1);
+      }
+
       & > label,
       & > .aca-label {
         font-weight: bold;
